--- a/TextToVideo/TextToVideo.ipynb
+++ b/TextToVideo/TextToVideo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "0ffc6f49",
    "metadata": {},
    "outputs": [],
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "7e3ea59f",
+   "execution_count": 24,
+   "id": "e8f927b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,27 +24,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "id": "c791ba2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def text_to_video(string):\n",
     "    string = string.upper()\n",
+    "    string_display = \"\"\n",
+    "    img_array = []\n",
+    "    \n",
     "    for ch in string:\n",
+    "        string_display += ch\n",
     "        if ch == \" \":\n",
     "            ch = \"Space\"\n",
     "        img = cv2.imread(cwd+ '//data//ASL_Dataset//Test//'+ch+\"//\"+'3001.jpg', cv2.IMREAD_COLOR)\n",
-    "        cv2.putText(img=img, text=ch, org=(50, 50), fontFace=cv2.FONT_HERSHEY_TRIPLEX, fontScale=2, color=(0, 0,255),thickness=2)\n",
-    "        cv2.imshow(\"Image\", img)\n",
-    "        cv2.waitKey(800)\n",
-    "        cv2.destroyAllWindows()\n",
-    "        "
+    "        cv2.putText(img=img, text=string_display, org=(20, 370), fontFace=cv2.FONT_HERSHEY_TRIPLEX, fontScale=1, color=(255, 255,255),thickness=1)\n",
+    "        \n",
+    "        img_array.append(img)\n",
+    "        height, width, layers = img.shape\n",
+    "        size = (width,height)\n",
+    "#         cv2.imshow(\"Image\", img)\n",
+    "#         cv2.waitKey(800)\n",
+    "#         cv2.destroyAllWindows()\n",
+    "    \n",
+    "    out = cv2.VideoWriter('project.avi',cv2.VideoWriter_fourcc(*'DIVX'), 3, size)\n",
+    " \n",
+    "    for i in range(len(img_array)):\n",
+    "        out.write(img_array[i])\n",
+    "    out.release()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "id": "5e3a9ea7",
    "metadata": {},
    "outputs": [],
@@ -55,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7f016ac",
+   "id": "d0667282",
    "metadata": {},
    "outputs": [],
    "source": []
