--- a/TextToVideo/TextToVideo.ipynb
+++ b/TextToVideo/TextToVideo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "0ffc6f49",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "e8f927b4",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "c791ba2f",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
     "#         cv2.waitKey(800)\n",
     "#         cv2.destroyAllWindows()\n",
     "    \n",
-    "    out = cv2.VideoWriter('project.avi',cv2.VideoWriter_fourcc(*'DIVX'), 3, size)\n",
+    "    out = cv2.VideoWriter('project.avi',cv2.VideoWriter_fourcc(*'DIVX'), 1.5, size)\n",
     " \n",
     "    for i in range(len(img_array)):\n",
     "        out.write(img_array[i])\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "5e3a9ea7",
    "metadata": {},
    "outputs": [],
@@ -75,10 +75,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "17d3c47e01c8d2d87d9e93381cd0429c120a0f22dbe405c98032296d31d00ceb"
+  },
   "kernelspec": {
    "display_name": "SignTech",
    "language": "python",
-   "name": "signtech"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -90,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
